--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://weather-app-red-seven-13.vercel.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -557,7 +557,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://razorpay2k23clone.netlify.app/">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
