--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
       - #SIDEBAR
     -->
 
-    <aside class="sidebar" data-sidebar>
+    <aside class="sidebar h-[700px]" data-sidebar>
 
       <div class="sidebar-info">
 
-        <figure class="flex items-center justify-center -mt-5 mb-6">
-          <img src="./assets/images/PIC.jpg" class="rounded-full h-40 w-36 object-cover border-4 border-yellow-500 shadow-md" alt="Shivam">
+        <figure class="flex items-center justify-center -mt-2 mb-3 ">
+          <img src="./assets/images/PIC.jpg" class="rounded-full relative h-40 w-36  object-cover border-4 border-yellow-500 shadow-md" alt="Shivam">
       </figure>
       
 
         <div class="info-content">
           <h1 class="name" title="Shivam">Shivam</h1>
 
-          <p class="title">Full Stack Developer</p>
+          <p class="title ">Full Stack Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -172,19 +172,19 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link text-lg active" data-nav-link>About</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link text-lg" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Projects</button>
+            <button class="navbar-link text-lg" data-nav-link>Projects</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link text-lg" data-nav-link>Contact</button>
           </li>
 
         </ul>
@@ -435,10 +435,6 @@
 
       </article>
 
-
-
-
-
       <!--
         - #PORTFOLIO
       -->
@@ -542,9 +538,9 @@
                 <p class="project-category">Web design</p>
               </a>
             </li>
+
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://weather-app-red-seven-13.vercel.app/">
-
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -636,10 +632,6 @@
     </div>
 
   </main>
-
-
-
-
 
 
   <!--
