--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       - #SIDEBAR
     -->
 
-    <aside class="sidebar h-[700px]" data-sidebar>
+    <aside class="sidebar h-[750px]" data-sidebar>
 
       <div class="sidebar-info">
 
         <figure class="flex items-center justify-center -mt-2 mb-3 ">
-          <img src="./assets/images/PIC.jpg" class="rounded-full relative h-40 w-36  object-cover border-4 border-yellow-500 shadow-md" alt="Shivam">
+          <img src="./assets/images/PIC.jpg" class="rounded-full h-40 w-36  object-cover border-4 border-yellow-500 shadow-md" alt="Shivam">
       </figure>
       
 
@@ -435,6 +435,10 @@
 
       </article>
 
+
+
+
+
       <!--
         - #PORTFOLIO
       -->
@@ -632,6 +636,10 @@
     </div>
 
   </main>
+
+
+
+
 
 
   <!--
