--- a/index.html
+++ b/index.html
@@ -529,6 +529,18 @@
                 <p class="project-category">Web development</p>
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://care-pulse-orcin.vercel.app/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/project-6.png" alt="demoPortfolio" loading="lazy">
+                </figure>
+                <h3 class="project-title">CarePulse - A healthcare Management App</h3>
+                <p class="project-category">Web development</p>
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="web design">
               <a href="https://portfolio-pink-alpha-11.vercel.app/">
 
